Add do Meu Perfil

--- a/projeto/paginas/promocoes.html
+++ b/projeto/paginas/promocoes.html
@@ -21,6 +21,10 @@
         <a href="./promocoes.html">
             <img src="../assets/bt2.png" alt="Promocoes">
         </a>
+    </a>
+    <a href="../paginas/formulario.html">
+        <img src="../assets/bt3.png" alt="Contato">
+    </a>
     </nav>
     <main>
         <table>
