--- a/projeto/paginas/formulario.html
+++ b/projeto/paginas/formulario.html
@@ -41,7 +41,7 @@
     <input type="button" value="ENVIAR" size="40">
     
     <p>
-    <center>Contato: (19) 99877-7789 24 horas por dia</center>
+    <center>Contato: (19) 99877-7789 24 horas por dia</center><!--comentarioS-->
     </p>
 </body>
 </html>
